
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int address; scalar_t__ allign; } ;


 int exit (int) ;
 int fprintf (int ,char*) ;
 TYPE_1__ icx ;
 int stderr ;

void type(int type)
{

 if(type == 1) {
  icx.address = 0xbf3fdaf4;
  icx.allign = 0;
  return;
 }


 if(type == 2) {
  icx.address = 0xbeffdaf4;
  icx.allign = 0;
  return;
 }


 if(type == 3) {
  icx.address = 0xbeffdaf4;
                icx.allign = 0;
                return;
 }

 fprintf(stderr, "! type not found..exiting\n");
 exit(1);
}
