; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_21363.c_type.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_21363.c_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@icx = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"! type not found..exiting\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @type(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp eq i32 %3, 1
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  store i32 -1086334220, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @icx, i32 0, i32 0), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @icx, i32 0, i32 1), align 8
  br label %18

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = icmp eq i32 %7, 2
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  store i32 -1090528524, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @icx, i32 0, i32 0), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @icx, i32 0, i32 1), align 8
  br label %18

10:                                               ; preds = %6
  %11 = load i32, i32* %2, align 4
  %12 = icmp eq i32 %11, 3
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  store i32 -1090528524, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @icx, i32 0, i32 0), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @icx, i32 0, i32 1), align 8
  br label %18

14:                                               ; preds = %10
  %15 = load i32, i32* @stderr, align 4
  %16 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %17 = call i32 @exit(i32 1) #3
  unreachable

18:                                               ; preds = %13, %9, %5
  ret void
}

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
